feat: refactor to ConfigurableJwtTokenValidator and add optional claims as configurable properties * filter optional claims list against a set of default required claims